tests/compile-fail/panic/panic_abort1.stderr
thread 'main' panicked at 'panicking from libstd', $DIR/panic_abort1.rs:LL:CC
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: abnormal termination: the program aborted execution
   |
   = note: inside `panic_abort::__rust_start_panic::abort` at rustc_src/src/lib.rs:LL:CC
   = note: inside `panic_abort::__rust_start_panic` at rustc_src/src/lib.rs:LL:CC
   = note: inside `std::panicking::rust_panic` at rustc_src/src/panicking.rs:LL:CC
   = note: inside `std::panicking::rust_panic_with_hook` at rustc_src/src/panicking.rs:LL:CC
   = note: inside closure at rustc_src/src/panicking.rs:LL:CC
   = note: inside `std::sys_common::backtrace::__rust_end_short_backtrace::<[closure@std::rt::begin_panic<&str>::{closure#0}], !>` at rustc_src/src/sys_common/backtrace.rs:LL:CC
   = note: inside `std::rt::begin_panic::<&str>` at rustc_src/src/panicking.rs:LL:CC
note: inside `main` at rustc_src/src/panic.rs:LL:CC
  --> $DIR/panic_abort1.rs:LL:CC
   |
LL |     std::panic!("panicking from libstd");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

